--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,5 +60,6 @@ jobs:
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
         run: |
-          claude -p "The CI checks failed. Please fix all lint and TypeScript errors by running 'npm run lint' and 'npm run build', then commit the fixes with message 'fix: auto-fix lint and type errors' and push to origin" \
-            --allowedTools "Edit,Bash(npm *),Bash(git *)"
+          claude -p \
+            --allowedTools "Read" "Edit" "Bash(npm *)" "Bash(git *)" \
+            "The CI checks failed. Please fix all lint and TypeScript errors by running 'npm run lint' and 'npm run build', then commit the fixes with message 'fix: auto-fix lint and type errors' and push to origin"
